public/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root {
    --background: #171717;
    --div-primary: #212121;
    --div-secondary: #454446;
    --div-extra: #39373b;
    --text-primary: #FFFFFF;
    --text-secondary: #BEBEBE;
    --alert: #FF7A7A;
}

body {
    background: var(--background);
    font-family: 'Poppins', sans-serif;
    color: var(--text-primary);
    overflow-x: hidden;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: var(--div-secondary)
}

::-webkit-scrollbar-thumb {
    background: var(--div-secondary);
    border-radius: 2px;
}

* {
    scrollbar-width: thin;
    scrollbar-color: var(--div-secondary) var(--div-secondary);
}

*::-webkit-scrollbar {
    width: 10px;
}

*::-webkit-scrollbar-track {
    background: var(--div-secondary);
}

*::-webkit-scrollbar-thumb {
    background: var(--text-primary);
    border-radius: 2px;
}

h1 {
    font-size: 2rem;
    font-weight: 400;
    line-height: 1.875rem;
}

container {
    max-width: 100px;
}

nav {
    margin-top: 20px;
    margin-bottom: 100px;
}

.navbar__logo {
    max-height: 40px;
}

a {
    text-decoration: none;
}

p {
    margin: 0;
}

.br__8 {
    border-radius: 8px;
}

.navbar__link {
    margin: 0 20px;
}

.navbar__link>a {
    text-shadow: 0px 2px 20px #000;
    font-size: 1.125rem;
    color: var(--text-primary);
    font-style: normal;
    font-weight: 200;
    line-height: normal;
    transition: 0.3s all;
}

.navbar__link>a:hover {
    color: var(--text-secondary);
}

.primary__button,
.secondary__button {
    font-size: 1rem;
    font-style: normal;
    color: var(--text-primary);
    font-weight: 200;
    line-height: normal;
    border: 1px solid var(--div-secondary);
    background: var(--div-secondary);
    transition: 0.3s all;
    padding: 10px 25px;
    margin: 0 5px;
    min-width: 130px;
    border-radius: 5px;
    text-align: center;
}

.secondary__button {
    background: none;
    border: 1px solid var(--div-secondary);
}

.primary__button:hover,
.secondary__button:hover {
    background: var(--div-primary);
    border: 1px solid var(--div-primary);
}

#upload__icon {
    margin-top: -3px;
    margin-right: 10px;
}

.header__background {
    position: absolute;
    top: 0;
    width: 100vw;
    height: 320px;
    max-height: 320px;
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #171717 100.68%), url('/images/header__background.png'), #212121;
    background-blend-mode: normal, screen, normal;
    background-position: 0 50%;
    background-size: cover;
    background-repeat: no-repeat;
    z-index: -1;
}

.container {
    max-width: 1160px;
}

.header__description {
    margin-top: 10px;
    font-size: 1.125rem;
    font-style: normal;
    font-weight: 200;
    line-height: 1.875rem;
}

.large__gutter {
    padding-left: 70px;
}

.post__container {
    padding: 20px;
    border-radius: 8px;
    background: var(--div-primary);
}

.post__thumbnail {
    width: 100%;
    height: 280px;
    text-align: center;
    border-radius: 8px;
}

.thumbnail {
    max-width: 100%;
    object-fit: contain;
}

.post__tag {
    font-size: 0.875rem;
    font-style: normal;
    font-weight: 200;
    line-height: 0.9375rem;
    color: var(--text-secondary);
    border-radius: 4px;
    background: var(--div-secondary);
    padding: 5px 10px;
    margin-bottom: 15px;
}

.post__title {
    color: var(--text-primary);
    font-size: 1.125rem;
    font-weight: 400;
    line-height: normal;
    margin-bottom: 10px;
}

.post__description {
    font-size: 1.125rem;
    font-style: normal;
    font-weight: 300;
    line-height: 1.875rem;
    color: var(--text-secondary);
}

.like__count {
    font-size: 0.875rem;
    font-style: normal;
    font-weight: 300;
    line-height: 0.9375rem;
    color: var(--text-secondary);
    margin-top: 10px;
}

.pointer {
    cursor: pointer;
}

.sticky-column {
    position: -webkit-sticky;
    position: sticky;
    top: 5rem;
}

.primary__input {
    font-size: 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: normal;
    padding: 6px 10px;
    background: var(--div-secondary);
    border-radius: 5px;
    border: none;
    outline: none;
    color: var(--text-secondary);
}

.login__button:hover {
    background: var(--div-extra);
}

.comment__input {
    background: var(--div-primary);
    padding: 20px;
}

.comment__input>textarea {
    background: var(--div-secondary);
    border: none;
    padding: 10px;
    color: var(--text-secondary);
    outline: none;
    height: 100px;
}

.error {
    color: var(--alert);
}

.error__border {
    border: 1px solid var(--alert)
}

.comment {
    padding: 20px;
    background: var(--div-primary);
}

.comment__text {
    font-size: 16px;
    height: auto;
    overflow: hidden;
    word-wrap: break-word;
}

.navbar__link>a>img {
    margin-top: -4px;
    margin-left: 5px;
}

.navbar__link:last-of-type {
    margin-right: 0;
}

.modal-body,
.modal-content {
    background: var(--div-primary);
    border: none;
    border-radius: 8px;
}

.upload__post {
    background: var(--div-secondary);
    border: none;
    border-radius: 5px;
    outline: none;
    color: var(--text-secondary);
    height: 100px;
    margin-top: 10px;
    font-weight: 200;
    font-size: 1rem;
    font-style: normal;
    padding: 10px;
}

.post__button:hover {
    background: var(--div-extra);
}

.custom-file-input {
    position: relative;
    overflow: hidden;
    width: 100%;
    display: inline-block;
}

.custom-file-input input {
    position: absolute;
    font-size: 100px;
    right: 0;
    top: 0;
    width: 100%;
    opacity: 0;
}

.custom-file-input label {
    display: inline-block;
    background: var(--div-secondary);
    color: #fff;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    width: 100%;
    text-align: center;
}

.navbar__link .dropdown-content {
    display: block;
    opacity: 0;
    visibility: hidden;
    position: absolute;
    background-color: var(--div-primary);
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    border-radius: 8px;
    left: -30px;
    top: 40px;
    transition: opacity 0.5s ease, visibility 0.5s ease;
}

.navbar__link .dropdown-content a {
    color: var(--text-primary);
    padding: 12px 16px;
    text-decoration: none;
    border-radius: 0px;
    display: block;
    font-size: 14px;
    font-weight: 200;
    transition: 0.3s all;
}

.navbar__link .dropdown-content a:first-of-type {
    border-radius: 8px 8px 0 0;
}

.navbar__link .dropdown-content a:last-of-type {
    border-radius: 0 0 8px 8px;
}

.navbar__link .dropdown-content a:hover {
    background-color: var(--div-secondary);
}

.navbar__link:hover .dropdown-content {
    opacity: 1;
    visibility: visible;
}

.profile__header {
    padding: 30px;
    background: linear-gradient(0deg, rgba(33, 33, 33, 0.20) 0%, rgba(33, 33, 33, 0.20) 100%), linear-gradient(272deg, #FF7EB3 0%, #FFD1E4 99.23%);
    border-radius: 20px;
}

.profile__avatar {
    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.40);
    border-radius: 20px;
}

.comment__delete {
    background: none;
    border: none;
}

@media (max-width: 992px) {
    .large__gutter {
        padding-left: 0.75rem;
    }
}

